--- a/carrito.html
+++ b/carrito.html
@@ -21,7 +21,16 @@
 </head>
 <body>
     <div class="contenedor">
+        <header class="header-mobile">
+            <h1 class="logo">Génesis Music</h1>
+            <button class="open-menu" id="open-menu">
+                <i class="bi bi-list"></i>
+            </button>
+        </header>
         <aside>
+            <button class="close-menu" id="close-menu">
+                <i class="bi bi-x"></i>
+            </button>
             <header>
                 <h1 class="logo">Génesis Music</h1>
             </header>
@@ -75,5 +84,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/carrito.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
